# ProjectMemento

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
.agent/: rules.md
.agent/workflows/: add-feature.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security-scan.yml
archive/: index.test.js
docs/: CLAUDE_HANDOFF_BUG_AUDIT.md  HANDOVER_CHECKPOINT_M1.1.md  HANDOVER_CHECKPOINT_M1.4.md  OPUS_REVIEW_2026-02-17.md  PROJECT_REVIEW_HANDOFF.md  REPO_UPDATE_PLAN.md  SESSION_SUMMARY_2026-02-17.md  SESSION_SUMMARY_2026-02-18.md  SONNET_TIER_TASKS.md
docs/intro/: DELIVERY_SUMMARY.md  GETTING_STARTED.md  PHASE2_DETAILED_PLAN.md  PROJECT 1 - AI Local Memory Bank.txt  README.md  REPO_UPDATE_PLAN.md
docs/playbooks/: architecture.md  development.md  project-management.md  security.md
docs/tasks/: README.md  RESEARCH-RESULTS.md  TASK-1.2.2-migrations.md  TASK-1.4.1-db-wrapper.md  TASK-1.6.1-base-adapter.md  TASK-1.9.1-vault-list.md  TASK-1.9.2-vault-show.md  TASK-1.9.3-vault-stats.md  TASK-1.9.4-cli-polish.md  TASK-D0-research.md  TASK-D0-test-scaffolding.md  TASK-T-test-base-adapter.md  TASK-T-test-blobs.md  TASK-T-test-chatgpt-adapter.md  (+6 more)
src/: index.js
tests/: conftest.py  test_base_adapter.py  test_blobs.py  test_chatgpt_adapter.py  test_cli.py  test_crypto.py  test_db.py  test_import_pipeline.py  test_migrations.py  test_models.py  test_pipeline.py  test_session.py
vault/: __init__.py
(+49 files in other folders)
